--- a/package.json
+++ b/package.json
@@ -4,19 +4,29 @@
   "description": "Macronutrient Tracker",
   "main": "server/main.js",
   "scripts": {
-    "start": "tsc && concurrently \"cd client && tsc -w\" \"node server/main.js\"",
+    "start": "tsc && concurrently \"cd client && tsc -w\" \"babel-node --presets es2015 server/main.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-preset-es2015": "^6.22.0",
     "body-parser": "^1.16.0",
-    "express": "^4.14.1"
+    "connect": "^3.5.0",
+    "dotenv": "^4.0.0",
+    "express": "^4.14.1",
+    "mongoose": "^4.8.1",
+    "promise": "^7.1.1"
   },
   "devDependencies": {
     "@types/body-parser": "0.0.33",
+    "@types/connect": "^3.4.30",
     "@types/express": "^4.0.35",
+    "@types/mongoose": "^4.7.3",
+    "@types/mongoose-promise": "^4.5.5",
     "@types/node": "^7.0.4",
+    "@types/promise": "^7.1.30",
     "concurrently": "^3.1.0",
     "typescript": "^2.1.5"
   }
